# siam-vqe

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
notebooks/: 00_setup_smoke_test.ipynb  01_L0_toy_groundstate.ipynb  01_L0_vqe_result.json  02_L1_job_ids.json  02_L1_nio_min_hardware.ipynb  02_L1_partial_result.json  02_L1_vqe_result.json
siam_vqe/: __init__.py  analysis.py  ansatz.py  hamiltonian.py  hardware.py  mappings.py  noise.py  reference_ed.py  reference_edrixs.py  vqe_runner.py
tests/: conftest.py  test_analysis.py  test_ansatz.py  test_hamiltonian.py  test_hardware.py  test_mappings.py  test_noise.py  test_observables.py  test_reference_ed.py  test_reference_edrixs.py  test_vqe_runner.py
